--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0265, grad_fn=<SumBackward0>)"
+       "tensor(0.2308, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,28 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.4634, 0.9897, 0.1787, 0.4349, 0.0167, 0.3649],\n",
-      "         [0.7099, 0.9547, 0.5703, 0.1806, 0.7663, 0.9474],\n",
-      "         [0.9830, 0.1877, 0.9027, 0.6246, 0.6299, 0.3868],\n",
-      "         [0.4183, 0.5125, 0.4309, 0.8094, 0.9803, 0.2339],\n",
-      "         [0.2485, 0.3744, 0.1150, 0.9519, 0.3056, 0.3546]]])\n",
-      "tensor([[[0.1507, 0.4008, 0.1402, 0.3307, 0.0758, 0.8889],\n",
-      "         [0.7818, 0.3829, 0.2486, 0.6583, 0.1921, 0.1057],\n",
-      "         [0.9768, 0.6531, 0.8914, 0.6375, 0.9425, 0.7716],\n",
-      "         [0.7123, 0.6627, 0.8847, 0.4672, 0.9280, 0.2724],\n",
-      "         [0.4409, 0.0255, 0.6359, 0.0811, 0.6480, 0.3709]]])\n",
-      "Final: tensor([[[-0.9702,  0.7729, -1.6328, -0.6300, -2.1410,  0.4659],\n",
-      "         [ 1.0003,  0.6541, -0.5104, -0.4656, -0.1972,  0.0153],\n",
-      "         [ 2.0511, -0.4612,  1.6791,  0.4848,  1.1814,  0.2518],\n",
-      "         [ 0.1893,  0.2897,  0.6048,  0.5174,  1.9355, -1.2120],\n",
-      "         [-0.8012, -1.4512, -0.6631, -0.0298, -0.2078, -0.7200]]],\n",
+      "tensor([[[0.4668, 0.7311, 0.8283, 0.0354, 0.9222, 0.2303],\n",
+      "         [0.3852, 0.6424, 0.4184, 0.0848, 0.7168, 0.8286],\n",
+      "         [0.8994, 0.1564, 0.9726, 0.1309, 0.1398, 0.9915],\n",
+      "         [0.9468, 0.4305, 0.0331, 0.0715, 0.7711, 0.3939],\n",
+      "         [0.2974, 0.8713, 0.8790, 0.4023, 0.0261, 0.5432]]])\n",
+      "tensor([[[0.8746, 0.2158, 0.2988, 0.9796, 0.3089, 0.4120],\n",
+      "         [0.9378, 0.4645, 0.0821, 0.7419, 0.7381, 0.5389],\n",
+      "         [0.6591, 0.4044, 0.6277, 0.3335, 0.2875, 0.5086],\n",
+      "         [0.2834, 0.5030, 0.1826, 0.1785, 0.3424, 0.3937],\n",
+      "         [0.9164, 0.5207, 0.1036, 0.9629, 0.0391, 0.8627]]])\n",
+      "Final: tensor([[[ 0.8051, -0.1205,  0.3020,  0.0391,  0.5461, -0.8354],\n",
+      "         [ 0.7619,  0.2549, -1.1682, -0.4026,  1.0713,  0.8661],\n",
+      "         [ 1.3145, -1.0267,  1.4123, -1.2527, -1.3400,  1.1772],\n",
+      "         [ 0.5441, -0.1522, -1.8362, -1.7557,  0.2702, -0.4944],\n",
+      "         [ 0.5056,  0.9237, -0.0369,  0.8607, -2.1894,  0.9561]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 1.3963,  0.6586, -1.9347,  ..., -1.3045,  1.2025, -0.5884],\n",
-       "         [-0.3633, -0.3044,  0.0583,  ...,  0.6497, -0.8477,  0.9421]]],\n",
+       "tensor([[[-0.9981, -0.8258, -1.5918,  ...,  1.7078,  0.8554,  0.6146],\n",
+       "         [ 1.1442, -0.9080,  0.5198,  ...,  0.9148, -1.3438,  0.2819]]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,13 +488,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LEARNING_RATE = 1e-3\n",
+    "LEARNING_RATE = 5e-4\n",
     "NUM_EPOCHS = 50\n",
-    "DROPOUT = 0.1\n",
+    "DROPOUT = 0.3\n",
     "DEVICE = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "D_K = 128\n",
@@ -507,17 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ClassificationTransformer(D_K, D_MODEL, D_V, D_FF, num_heads=4, num_classes=OUTPUT_DIM, num_layers=4, vocab_size=VOCAB_SIZE)\n",
+    "model = ClassificationTransformer(D_K, D_MODEL, D_V, D_FF, num_heads=4, num_classes=OUTPUT_DIM, num_layers=2, vocab_size=VOCAB_SIZE)\n",
     "model = model.to(DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,6 @@
     "            optim.zero_grad()\n",
     "            loss.backward()\n",
     "            optim.step()\n",
-    "            \n",
     "            running_loss += loss.item()\n",
     "            losses.append(loss)\n",
     "\n",
@@ -548,21 +547,23 @@
     "            val_loss = 0.0\n",
     "        \n",
     "        with torch.no_grad():\n",
+    "            correct_pred = 0.0\n",
     "            for i, batch_data in enumerate(val_loader):\n",
     "                (y, x, x_size) = batch_data\n",
     "                y, x, x_size = y.to(device), x.to(device), x_size.to(device)\n",
-    "                \n",
-    "                logits = model(x, x_size.cpu())\n",
+    "                logits = model(x)\n",
     "                loss = loss_function(logits, y)\n",
-    "                \n",
+    "                _, predicted_labels = torch.max(logits, 1)\n",
+    "                correct_pred += (predicted_labels.long() == y.long()).sum()\n",
     "                val_loss += loss.item()\n",
-    "        \n",
-    "        print(\"Epoch: {}, validation loss: {:.4f}\".format(epoch+1, val_loss/len(val_loader)))"
+    "            \n",
+    "            val_accuracy = (correct_pred / len(val_loader)) * 100\n",
+    "        print(\"Epoch: {}, validation loss: {:.4f}, val accuracy: {:.2f}\".format(epoch+1, val_loss/len(val_loader), val_accuracy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -580,32 +581,15 @@
      "text": [
       "Epoch 1 / 50\n",
       "----------\n",
-      "Step: 1000, average training loss over last 2000 steps: 1.1639\n",
-      "Step: 2000, average training loss over last 2000 steps: 0.7549\n",
-      "Step: 3000, average training loss over last 2000 steps: 0.6142\n",
-      "Step: 4000, average training loss over last 2000 steps: 0.5555\n",
-      "Step: 5000, average training loss over last 2000 steps: 0.4905\n",
-      "Step: 6000, average training loss over last 2000 steps: 0.4827\n",
-      "Step: 7000, average training loss over last 2000 steps: 0.4359\n",
-      "Step: 8000, average training loss over last 2000 steps: 0.4413\n",
-      "Step: 9000, average training loss over last 2000 steps: 0.4520\n",
-      "Step: 10000, average training loss over last 2000 steps: 0.4281\n",
-      "Step: 11000, average training loss over last 2000 steps: 0.4076\n",
-      "Step: 12000, average training loss over last 2000 steps: 0.4091\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "forward() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[227], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train(model, train_loader, val_loader, torch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49mcross_entropy, optimizer, NUM_EPOCHS, DEVICE)\n",
-      "Cell \u001b[0;32mIn[225], line 34\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, loss_function, optim, epochs, device)\u001b[0m\n\u001b[1;32m     31\u001b[0m (y, x, x_size) \u001b[39m=\u001b[39m batch_data\n\u001b[1;32m     32\u001b[0m y, x, x_size \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39mto(device), x\u001b[39m.\u001b[39mto(device), x_size\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m---> 34\u001b[0m logits \u001b[39m=\u001b[39m model(x, x_size\u001b[39m.\u001b[39;49mcpu())\n\u001b[1;32m     35\u001b[0m loss \u001b[39m=\u001b[39m loss_function(logits, y)\n\u001b[1;32m     37\u001b[0m val_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39mitem()\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 3 were given"
+      "Step: 1000, average training loss over last 2000 steps: 1.1895\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.7279\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.5816\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.5322\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.4835\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.4761\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.4433\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.4365\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.4312\n"
      ]
     }
    ],
