--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.2308, grad_fn=<SumBackward0>)"
+       "tensor(0.1158, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,28 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.4668, 0.7311, 0.8283, 0.0354, 0.9222, 0.2303],\n",
-      "         [0.3852, 0.6424, 0.4184, 0.0848, 0.7168, 0.8286],\n",
-      "         [0.8994, 0.1564, 0.9726, 0.1309, 0.1398, 0.9915],\n",
-      "         [0.9468, 0.4305, 0.0331, 0.0715, 0.7711, 0.3939],\n",
-      "         [0.2974, 0.8713, 0.8790, 0.4023, 0.0261, 0.5432]]])\n",
-      "tensor([[[0.8746, 0.2158, 0.2988, 0.9796, 0.3089, 0.4120],\n",
-      "         [0.9378, 0.4645, 0.0821, 0.7419, 0.7381, 0.5389],\n",
-      "         [0.6591, 0.4044, 0.6277, 0.3335, 0.2875, 0.5086],\n",
-      "         [0.2834, 0.5030, 0.1826, 0.1785, 0.3424, 0.3937],\n",
-      "         [0.9164, 0.5207, 0.1036, 0.9629, 0.0391, 0.8627]]])\n",
-      "Final: tensor([[[ 0.8051, -0.1205,  0.3020,  0.0391,  0.5461, -0.8354],\n",
-      "         [ 0.7619,  0.2549, -1.1682, -0.4026,  1.0713,  0.8661],\n",
-      "         [ 1.3145, -1.0267,  1.4123, -1.2527, -1.3400,  1.1772],\n",
-      "         [ 0.5441, -0.1522, -1.8362, -1.7557,  0.2702, -0.4944],\n",
-      "         [ 0.5056,  0.9237, -0.0369,  0.8607, -2.1894,  0.9561]]],\n",
+      "tensor([[[0.7958, 0.4520, 0.4050, 0.9265, 0.7730, 0.0397],\n",
+      "         [0.6503, 0.8041, 0.2931, 0.2508, 0.3734, 0.3316],\n",
+      "         [0.2894, 0.1084, 0.2821, 0.8636, 0.9661, 0.8210],\n",
+      "         [0.7355, 0.9744, 0.5085, 0.9770, 0.6735, 0.8006],\n",
+      "         [0.6041, 0.9980, 0.2944, 0.1588, 0.9294, 0.0419]]])\n",
+      "tensor([[[0.9855, 0.8248, 0.9370, 0.0482, 0.4321, 0.6577],\n",
+      "         [0.6149, 0.9740, 0.9499, 0.9845, 0.0657, 0.2232],\n",
+      "         [0.5183, 0.6081, 0.8234, 0.5644, 0.5225, 0.3515],\n",
+      "         [0.9325, 0.8321, 0.4569, 0.0563, 0.7681, 0.3281],\n",
+      "         [0.9918, 0.1495, 0.6933, 0.4767, 0.4997, 0.3312]]])\n",
+      "Final: tensor([[[ 1.6153,  0.3089,  0.4777, -0.4732,  0.1234, -1.1910],\n",
+      "         [ 0.2791,  1.6069,  0.2216,  0.2017, -1.8600, -1.5603],\n",
+      "         [-0.9057, -1.1418, -0.1347,  0.7003,  0.8574,  0.0388],\n",
+      "         [ 1.3216,  1.6804, -0.4972, -0.3215,  0.7356, -0.0745],\n",
+      "         [ 1.1351, -0.0258, -0.4394, -1.3513,  0.7033, -2.0308]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.9981, -0.8258, -1.5918,  ...,  1.7078,  0.8554,  0.6146],\n",
-       "         [ 1.1442, -0.9080,  0.5198,  ...,  0.9148, -1.3438,  0.2819]]],\n",
+       "tensor([[[ 1.0040, -0.6596, -1.0033,  ..., -1.1891, -1.5098,  0.2274],\n",
+       "         [-1.8384, -0.6719,  0.6867,  ...,  0.5574, -1.3400,  1.0287]]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,13 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(model, train_loader, val_loader, loss_function, optim, epochs, device):\n",
     "    losses = [] #group losses for loss visualization \n",
     "    running_loss = 0.0\n",
+    "    val_losses = []\n",
     "    for epoch in range(epochs):\n",
     "        model.train()\n",
     "        print(\"Epoch %d / %d\" % (epoch+1, epochs))\n",
@@ -543,11 +544,11 @@
     "                print(\"Step: {}, average training loss over last 2000 steps: {:.4f}\".format(i+1, running_loss/1000))\n",
     "                running_loss = 0.0\n",
     "            \n",
-    "            model.eval()\n",
-    "            val_loss = 0.0\n",
-    "        \n",
+    "        model.eval()\n",
+    "        val_loss = 0.0\n",
     "        with torch.no_grad():\n",
     "            correct_pred = 0.0\n",
+    "            num_samples = 0\n",
     "            for i, batch_data in enumerate(val_loader):\n",
     "                (y, x, x_size) = batch_data\n",
     "                y, x, x_size = y.to(device), x.to(device), x_size.to(device)\n",
@@ -555,15 +556,19 @@
     "                loss = loss_function(logits, y)\n",
     "                _, predicted_labels = torch.max(logits, 1)\n",
     "                correct_pred += (predicted_labels.long() == y.long()).sum()\n",
+    "                num_samples+=predicted_labels.shape[0]\n",
     "                val_loss += loss.item()\n",
     "            \n",
-    "            val_accuracy = (correct_pred / len(val_loader)) * 100\n",
-    "        print(\"Epoch: {}, validation loss: {:.4f}, val accuracy: {:.2f}\".format(epoch+1, val_loss/len(val_loader), val_accuracy))"
+    "            val_accuracy = (correct_pred / num_samples) * 100\n",
+    "            val_losses.append(val_loss)\n",
+    "        print(\"Epoch: {}, validation loss: {:.4f}, val accuracy: {:.2f}\".format(epoch+1, val_loss/len(val_loader), val_accuracy))\n",
+    "    \n",
+    "    return losses, val_losses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -581,20 +586,32 @@
      "text": [
       "Epoch 1 / 50\n",
       "----------\n",
-      "Step: 1000, average training loss over last 2000 steps: 1.1895\n",
-      "Step: 2000, average training loss over last 2000 steps: 0.7279\n",
-      "Step: 3000, average training loss over last 2000 steps: 0.5816\n",
-      "Step: 4000, average training loss over last 2000 steps: 0.5322\n",
-      "Step: 5000, average training loss over last 2000 steps: 0.4835\n",
-      "Step: 6000, average training loss over last 2000 steps: 0.4761\n",
-      "Step: 7000, average training loss over last 2000 steps: 0.4433\n",
-      "Step: 8000, average training loss over last 2000 steps: 0.4365\n",
-      "Step: 9000, average training loss over last 2000 steps: 0.4312\n"
+      "Step: 1000, average training loss over last 2000 steps: 1.2433\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.8219\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.6680\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.5879\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.5594\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.5212\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.5074\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.4896\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.4554\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.4656\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.4156\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.4386\n",
+      "Epoch: 1, validation loss: 0.3730, val accuracy: 87.60\n",
+      "Epoch 2 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.3983\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.3956\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.3784\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.3798\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.3922\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.3831\n"
      ]
     }
    ],
    "source": [
-    "train(model, train_loader, val_loader, torch.nn.functional.cross_entropy, optimizer, NUM_EPOCHS, DEVICE)"
+    "train_loss, val_loss = train(model, train_loader, val_loader, torch.nn.functional.cross_entropy, optimizer, NUM_EPOCHS, DEVICE)"
    ]
   },
   {
